Fix alt text wrap and line breaks (#14)
Reviewed-on: https://akkoma.dev/AkkomaGang/pleroma-fe/pulls/14
Co-committed-by: sfr <sol@solfisher.com>

--- a/src/components/attachment/attachment.scss
+++ b/src/components/attachment/attachment.scss
@@ -33,7 +33,8 @@
       line-height: 1.5;
       padding: 0.5em;
       margin: 0;
-      white-space: nowrap;
+      white-space: pre-line;
+      word-break: break-word;
       text-overflow: ellipsis;
       overflow: hidden;
     }
